[package]
name = "iron_config"
version = "0.1.1"
authors = ["zoumi"]
description = "This is a config file reader for Iron framework(an web framework writen in Rust).You can put all you settings in a file which names Iron.toml."
documentation = "https://github.com/zoumi/iron_config"
repository = "https://github.com/zoumi/iron_config"
readme = "README.md"
license = "Apache License 2.0/MIT License"


[dependencies]
lazy_static = "0.2.8"
toml = "0.4.5"
